PizzaApp.Web/wwwroot/css/site.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
  font-size: 14px;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

.hidden {
    display: none !important;
}

.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
}

html {
  position: relative;
  min-height: 100%;
}

.container-main {
    padding: 3rem;
    max-width: 1320px;
    margin: auto;
    display: none;
    margin-bottom: 60px;
}

.navbar-nav {
    gap: 4px;
}

nav.navbar > div.container-fluid {
    max-width: 1320px;
}

.navbar-nav-item {
    border-radius: 10px;
    cursor: pointer;
    color: white;
}

.navbar-nav-item > i {
    color: white;
}

.navbar-nav-item:hover {
}

.user-icon-dropdown {
    position: relative;
}

.account-dropdown-menu {
    list-style-type: none;
    position: absolute;
    top: 50px;
    right: 10px;
    border: 4px solid gray;
    display: flex;
    flex-direction: column;
    width: 300px;
    background: gray;
    gap: 4px;
    border-radius: 5px;
    padding: 0;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.account-dropdown-menu:after {
    margin: 0;
    padding: 0;
    display: block;
    position: absolute;
    content: "";
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    border-bottom: 10px solid gray;
    right: -3px;
    top: -12px;
}

.account-dropdown-menu > li {
    width: 100%;
    background: white;
    border-radius: 5px;
    text-align: center;
    padding-top: 5px;
    padding-bottom: 5px;
}

.account-dropdown-menu > li > a {
    display: inline-block;
    text-decoration: none;
    color: black;
    width: 100%;
}

#btn-logout {
    width: 100%;
    padding: 0;
}

#site-logo {
    max-height: 70px;
}

